# project_test

./: .env  .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  README.md  a faire.txt  analyze_bpm.py  app.py  cleanup.bat  cleanup.sh  cli.py  config.py  initialization.py  initialization_backup.py  launch.sh  make_executable.sh  migrate_to_postgres.py  migrations.py  pyproject.toml  pytest.ini  quickstart.bat  quickstart.sh  requirements.txt  restart.sh  run.py  run_tests.py  setup.cfg  setup.py  setup_db.py  sqlite_backup_20250711_160849.json  sqlite_backup_20250711_161741.json  start.sh  test_admin.py  test_postgres_connection.py  test_setup.py  test_system.py  verify.sh  verify_components.sh  wsgi.py
apache/: .htaccess  dj-music.conf
app/: __init__.py  config.py  models.py  routes.py  swagger_config.py
app/static/css/: mixer.css  style.css
app/static/js/: audio-engine.js  deck-controller.js  effect-chain.js  main.js  mixer.js  theme.js  track-library.js
app/templates/: base.html  choose_mode.html  converter.html  landing_page.html  landing_page_details.html  loading.html  login.html  mixer.html
app/templates/admin/: base.html  dashboard.html  users.html
dj_online_studio/: __init__.py  audio_processor.py  config.py  extensions.py  models.py
dj_online_studio/routes/: __init__.py  main.py
dj_online_studio/templates/: index.html
docs/: README.md  architecture.md  file_details.md  http_errors.md  installation.md  postgresql_migration.md  security.md
tests/: __init__.py  conftest.py  generate_test_audio.py  requirements-test.txt  test_app.py  test_audio_processor.py  test_cli.py  test_models.py  test_routes.py
tests/test_files/: .gitignore  .gitkeep
(+5 files in other folders)
