[tool.poetry]
name = "dj-online-studio"
version = "0.1.0"
description = "A web-based DJ application inspired by Serato DJ Pro"
authors = ["Baptiste Rivière"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.0.1"
flask-sqlalchemy = "2.5.1"
flask-migrate = "3.1.0"
flask-cors = "3.0.10"
librosa = "0.9.1"
pydub = "0.25.1"
numpy = "1.21.2"
soundfile = "0.10.3.post1"
scipy = "1.7.1"
gunicorn = "20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dj_online_studio --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["dj_online_studio"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["dj_online_studio"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]
